WebComp first tests. Decoupling and hydration.

--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,21 @@ graphics-not-used/ground_shaker_asset/Red/Weapons/turret_02_mk4.gif
 graphics-not-used/ground_shaker_asset/Red/Weapons/turret_02_mk4.png
 graphics-not-used/ground_shaker_asset/Red/Weapons/weapons.png
 graphics-not-used/ground_shaker_asset/Terrains/terrain.png
+graphics-not-used/--ui-panel-1/18-01-2021-15-22-Uputstvo-RX1-RX2 SOLID-RX3-RX4-SRB.pdf
+graphics-not-used/--ui-panel-1/ui-panel-1.png
+graphics-not-used/--ui-panel-1/ui-panel-1.psd
+graphics-not-used/--ui-panel-1/ui-panel-1.webp
+graphics-not-used/different-hud-elements-flat-frames-set/7158.eps
+graphics-not-used/different-hud-elements-flat-frames-set/7158.jpg
+graphics-not-used/different-hud-elements-flat-frames-set/License free.txt
+graphics-not-used/different-hud-elements-flat-frames-set/License premium.txt
+graphics-not-used/game-live-stream-interface-elements/2206_w026_n002_2131b_p1_2131.eps
+graphics-not-used/game-live-stream-interface-elements/2206_w026_n002_2131b_p1_2131.jpg
+graphics-not-used/game-live-stream-interface-elements/2206_w026_n002_2131b_p1_2131.psd
+graphics-not-used/gradient-black-technology-background/6397022.jpg
+graphics-not-used/gradient-black-technology-background/6408591.eps
+graphics-not-used/gradient-black-technology-background/6408592.ai
+graphics-not-used/various-modern-hud-flat-elements-set/7920.eps
+graphics-not-used/various-modern-hud-flat-elements-set/7920.jpg
+graphics-not-used/various-modern-hud-flat-elements-set/License free.txt
+graphics-not-used/various-modern-hud-flat-elements-set/License premium.txt
