Ping on the minimap added

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,172 @@ graphics-not-used/various-modern-hud-flat-elements-set/7920.eps
 graphics-not-used/various-modern-hud-flat-elements-set/7920.jpg
 graphics-not-used/various-modern-hud-flat-elements-set/License free.txt
 graphics-not-used/various-modern-hud-flat-elements-set/License premium.txt
+graphics-not-used/d3d857de72b6ae08cba26978097c22ce.jpg
+graphics-not-used/d82uczp-98233a8f-886a-4407-8e65-18daf0d6f226.jpg
+graphics-not-used/dima-sword-carrage-04.jpg
+graphics-not-used/game-frames-sci-fi-style-with-best-players-list-rate-share-banners-vector-cartoon-set-blue-futuristic-gui-elements-board-with-winners-usernames-feedback-with-stars-connect-buttons.zip
+graphics-not-used/game-live-video-stream-interface-elements.zip
+graphics-not-used/game-stream-overlay-ui-frame-with-yellow-neon-glow.zip
+graphics-not-used/game-stream-overlay-yellow-neon-ui-frame-buttons.zip
+graphics-not-used/game-user-interface-cartoon-style_22289-32.webp
+graphics-not-used/image.jpg
+graphics-not-used/military-symbols-1.png
+graphics-not-used/robot-game-gui_22191-186.avif
+graphics-not-used/stanislav-strelets-game-rank-icons-pack-prew.jpg
+graphics-not-used/various-modern-hud-flat-elements-set (1).zip
+graphics-not-used/tanks/AriochIV_Jim_Francis/d6vrljg-04f77760-5d24-4775-9b2d-ae35b7759da1.jpg
+graphics-not-used/tanks/AriochIV_Jim_Francis/d7oobxw-99e4d92a-8aff-439f-bd3e-2e5a0bdf1166.jpg
+graphics-not-used/tanks/AriochIV_Jim_Francis/d8y97xv-76226c5f-d94f-48df-9529-b406770b1070.jpg
+graphics-not-used/tanks/AriochIV_Jim_Francis/dae2ej8-87177763-972d-49f9-8056-f90ede7e48e1.jpg
+graphics-not-used/+ ui/cursors/advanced target w=countdown (1).ani
+graphics-not-used/+ ui/cursors/advanced target w=countdown.ani
+graphics-not-used/+ ui/cursors/army-set.zip
+graphics-not-used/+ ui/cursors/Block Grabber.cur
+graphics-not-used/+ ui/cursors/civ-v-animated-2.zip
+graphics-not-used/+ ui/cursors/civvanimated.zip
+graphics-not-used/+ ui/cursors/crosshair-target-reticles.zip
+graphics-not-used/+ ui/cursors/crosshair-thank-you.zip
+graphics-not-used/+ ui/cursors/cs-1-6.zip
+graphics-not-used/+ ui/cursors/cursor-cursors-3.zip
+graphics-not-used/+ ui/cursors/cursor-cursors-pack.zip
+graphics-not-used/+ ui/cursors/danger.zip
+graphics-not-used/+ ui/cursors/flags-v64.zip
+graphics-not-used/+ ui/cursors/oarnge-cursors.zip
+graphics-not-used/+ ui/cursors/oceandusk.zip
+graphics-not-used/+ ui/cursors/OceanDuskPrecision.cur
+graphics-not-used/+ ui/cursors/ping.zip
+graphics-not-used/+ ui/cursors/portal-logo.zip
+graphics-not-used/+ ui/cursors/random-cursor-file.zip
+graphics-not-used/+ ui/cursors/recording-theme-plus-a-flame-.zip
+graphics-not-used/+ ui/cursors/redray.zip
+graphics-not-used/+ ui/cursors/reticules.zip
+graphics-not-used/+ ui/cursors/stuff.zip
+graphics-not-used/+ ui/cursors/target-the-great.zip
+graphics-not-used/+ ui/cursors/TargetLock.ani
+graphics-not-used/+ ui/cursors/tron-green-glow.zip
+graphics-not-used/+ ui/cursors/yoru-valorant.zip
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/1db5ac15567937.5c80f9742a647.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/8b52c815567937.5c80f97429eea.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/45c95515567937.5c80f9742a1c9.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/858e3315567937.5c80f97429284.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/913f0815567937.5c80f97429ac1.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/72901115567937.5c80f9742a41c.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/a55fc815567937.5c80f97429833.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/d6881c15567937.5c80f9742abf1.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/d18693fc59d7daafb4683ef2a8365ecf.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/db264d15567937.5c80f97429020.jpg
+graphics-not-used/+ ui/icons/Revolution_Ace_Jonny_Shaw/e6a17c15567937.5c80f97428d29.jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/3aff2416414435.562ab64a638b0.jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/4dc64816414435.562ab69281639.jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/7acab916414435.562ab64fda57b.jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/42be9316414435.562ab5b2884e4 (1).jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/42be9316414435.562ab5b2884e4.jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/81c65016414435.562ab6929ad89.jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/3024c816414435.562ab5b3e3411.jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/3852db16414435.562ab5b3ad942.jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/7452d116414435.562ab69279084.jpg
+graphics-not-used/+ ui/icons/Space_gui_Ryan_Do/New Text Document.txt
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/New Text Document.txt
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-1-logo.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-2-pause.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-3-settings.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-4-login.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-5-info.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-6-character.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-7-inventory.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-8-levels.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-9-quests.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-10-result.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-11-shop.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-14-ranks.jpg
+graphics-not-used/+ ui/icons/War_Game_Army_Mobile_UI/stanislav-strelets-a8f238131f4061dfeee153cd3df83b33.jpg
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCAttack_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/sccattack.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCAttMov_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCAttMov.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCCashHack.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCEnter_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCEnter.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCExit.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCFriendly_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCFriendly.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCGuard.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCHeal.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCHostile_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCHostile.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCHostile2.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCHostile3.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCKnifeAttack.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCMove_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/sccmove.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCNoAction_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCNoAction.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCNoBomb.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCNoEntry_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCNoEntry.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCNoKnife.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCOutrange.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCPlace.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCPlaceBeacon.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/sccpointer.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCRallyPnt - Copy.cur
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCRallyPnt_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCRallyPnt.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCRemoteChg.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCRepair.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCResumeC.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/sccscroll0.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/sccscroll1.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/sccscroll2.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/sccscroll3.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCScroll4.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCScroll5.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCScroll6.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCScroll7.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCSDIUplink.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCSelect.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCSell.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCSniper.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCSpyDrone.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCStop.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCTimedChg.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCTNTAttack.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCWaypoint_S.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/SCCWaypoint.ani
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_01.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_02.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_03.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_04.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_05.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_06.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_07.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_08.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_09.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_10.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_11.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_12.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_13.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_14.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_15.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/sccattack_page_16.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttack_S_page_01.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttack_S_page_02.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttMov_page_01.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttMov_page_02.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttMov_page_03.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttMov_page_04.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttMov_page_05.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttMov_page_06.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttMov_page_07.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttMov_S_page_01.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCAttMov_S_page_02.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_01.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_02.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_03.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_04.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_05.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_06.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_07.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_08.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_09.svg
+graphics-not-used/+ ui/cursors/RA3Cursors/Converted/SCCCashHack_page_10.svg
